--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <html>   
 <head>  
   <title> Login Page </title>  
+  <h1>Online Net Banking System
 </head>    
 <body>    
     <form action="reg.html">  
