--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <html>   
 <head>  
   <title> Login Page </title>  
-  <h1>Online Net Banking System
+  <h1>Online Net Banking System</h1>
 </head>    
 <body>    
     <form action="reg.html">  
