--- a/login.html
+++ b/login.html
@@ -6,9 +6,9 @@
 <body>    
     <form action="reg.html">  
         <div class="container">   
-            <label>Username : </label>   
+          <h2><label>Username : </label>  </h2>
             <input type="text" placeholder="Enter Username" name="username" required>  
-            <label>Password : </label>   
+            <h2> <label>Password : </label>   </h2>
             <input type="password" placeholder="Enter Password" name="password" required>  
             <button type="submit">Login</button>   
              
