--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 
 <div id="navigation">
     <ul>
-	<li><a href="home.html">HOME</a></li>
+	<li><a href="index.html">HOME</a></li>
     <li><a href="login.html">LOGIN</a></li>
     <li><a href="services.html">SERVICES</a></li>
     <li><a href="about.html">ABOUT US</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
     </ul>
 </div>
-
+<p>
+	This is a online net banking portal!!
+	</p>
 
 </body>
 </html>
