--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,27 @@
 
+<html>
+  <head>
+    contact details
+  </head>
+  <body>
+    <div>
+    Branch name: a1
+    email:a1bank@gmial.com
+    mobile:9849494854
+    address:#23,vidyanagar
+    </div>
+    
+    <div>
+    Branch name: a2
+    email:a2bank@gmial.com
+    mobile:9879765437
+    address:#45,navnagar
+    </div>
+    
+    <div>
+    Branch name: a3
+    email:a2bank@gmial.com
+    mobile:8796567867
+    address:#67,housur
+    </div>
+</html>
