--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <head>
 
 <title>Net Banking ..</title>
-li {
-  display: inline;
-}
+
 </head>
 
 <body>
@@ -14,7 +12,7 @@ li {
 
 </div>
 
-<div id="navigation">
+<nav>
     <ul>
 	<li><a href="index.html">HOME</a></li>
     <li><a href="login.html">LOGIN</a></li>
@@ -22,7 +20,7 @@ li {
     <li><a href="about.html">ABOUT US</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
     </ul>
-</div>
+</nav>
 <p>
 	This is a online net banking portal!!
 	</p>
