--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,23 @@
   </head>
   <body>
     <div>
-    Branch name: a1
-    email:a1bank@gmial.com
-    mobile:9849494854
-    address:#23,vidyanagar
+    <br>Branch name: a1</br>
+    <br>email:a1bank@gmial.com</br>
+    <br>mobile:9849494854</br>
+   <br> address:#23,vidyanagar</br>
     </div>
     
     <div>
-    Branch name: a2
-    email:a2bank@gmial.com
-    mobile:9879765437
-    address:#45,navnagar
+    <br>Branch name: a2</br>
+    <br>email:a2bank@gmial.com</br>
+    <br>mobile:9879765437</br>
+   <br> address:#45,navnagar</br>
     </div>
     
     <div>
-    Branch name: a3
-    email:a2bank@gmial.com
-    mobile:8796567867
-    address:#67,housur
+    <br><br><br>Branch name: a3</br>
+    <br><br>email:a2bank@gmial.com</br>
+    <br>mobile:8796567867</br></br>
+   <br> address:#67,housur</br>
     </div>
 </html>
