--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,20 @@
     <br>Branch name: a1</br>
     <br>email:a1bank@gmial.com</br>
     <br>mobile:9849494854</br>
-   <br> address:#23,vidyanagar</br>
+   <br>address:#23,vidyanagar
     </div>
     
     <div>
     <br>Branch name: a2</br>
     <br>email:a2bank@gmial.com</br>
     <br>mobile:9879765437</br>
-   <br> address:#45,navnagar</br>
+   <br> address:#45,navnagar
     </div>
     
     <div>
     <br><br><br>Branch name: a3</br>
     <br><br>email:a2bank@gmial.com</br>
     <br>mobile:8796567867</br></br>
-   <br> address:#67,housur</br>
+   <br> address:#67,housur
     </div>
 </html>
