--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <h1> contact details</h1>
+    <h2> contact details</h2>
   </head>
   <body>
     <div>
@@ -21,7 +21,7 @@
     <div>
     <br><br><br>Branch name: a3</br>
     <br><br>email:a2bank@gmial.com</br>
-    <br>mobile:8796567867</br></br>
+    <br>mobile:8796567867</br>
    <br> address:#67,housur
     </div>
 </html>
