--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
     <br>Branch name: a2</br>
     <br>email:a2bank@gmial.com</br>
     <br>mobile:9879765437</br>
-   <br> address:#45,navnagar
+<br> address:#45,navnagar</br>
     </div>
     
     <div>
-    <br><br><br>Branch name: a3</br>
-    <br><br>email:a2bank@gmial.com</br>
+    <br>Branch name: a3</br>
+    <br>email:a2bank@gmial.com</br>
     <br>mobile:8796567867</br>
-   <br> address:#67,housur
+<br> address:#67,housur</br>
     </div>
 </html>
