--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,14 @@
     <br>Branch name: a1</br>
     <br>email:a1bank@gmial.com</br>
     <br>mobile:9849494854</br>
-   <br>address:#23,vidyanagar
+<br>address:#23,vidyanagar</br>
     </div>
     
     <div>
     <br>Branch name: a2</br>
     <br>email:a2bank@gmial.com</br>
     <br>mobile:9879765437</br>
-<br> address:#45,navnagar</br>
+<br> address:#45,navnagar</br></br>
     </div>
     
     <div>
