--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <br>Branch name: a1</br>
     <br>email:a1bank@gmial.com</br>
     <br>mobile:9849494854</br>
-<br>address:#23,vidyanagar</br>
+<br>address:#23,vidyanagar</br></br>
     </div>
     
     <div>
