--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<nav>
+<div class="topnav">
     <ul>
     <li><a href="index.html">HOME</a></li>
     <li><a href="login.html">LOGIN</a></li>
@@ -16,7 +16,7 @@
     <li><a href="about.html">ABOUT US</a></li>
     <li><a href="contact.html">CONTACT US</a></li>
     </ul>
-</nav>
+</div>
 <p>
 	This is a online net banking portal!!
 	</p>
