--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
 <div class="topnav">
-    <ul>
-    <li><a href="index.html">HOME</a></li>
-    <li><a href="login.html">LOGIN</a></li>
-    <li><a href="services.html">SERVICES</a></li>
-    <li><a href="about.html">ABOUT US</a></li>
-    <li><a href="contact.html">CONTACT US</a></li>
+    
+    <a href="index.html">HOME</a>
+    <a href="login.html">LOGIN</a>
+    <a href="services.html">SERVICES</a>
+    <a href="about.html">ABOUT US</a>
+    <a href="contact.html">CONTACT US</a>
     </ul>
 </div>
 <p>
