--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
 <title>Net Banking ..</title>
 <h1>Online Net Banking System<span class="style1"></span></h1>
 	<h1>For ASH Bank Co.Ltd<span class="style1"></span></h1>
+	
 
 </head>
+<style>
+	.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
 
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+	</style>
 <body>
 <div class="topnav">
     
