--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <head>
 
 <title>Net Banking ..</title>
-<h1>Online Net Banking System<span class="style1"></span></h1>
-	<h1>For ASH Bank Co.Ltd<span class="style1"></span></h1>
-	
 
 </head>
 <style>
@@ -41,6 +38,12 @@
     <a href="contact.html">CONTACT US</a>
     
 </div>
+	<div>
+	<h1>Online Net Banking System<span class="style1"></span></h1>
+	<h1>For ASH Bank Co.Ltd<span class="style1"></span></h1>
+	</div>
+	
+
 <p>
 	This is a online net banking portal!!
 	</p>
