--- a/about.html
+++ b/about.html
@@ -1,3 +1,8 @@
 <html>
-  <head>about us</head>
+  ABOUT ASH BANK
+Our Corporate Office.
+ASH Bank Limited, Corporate Office, Hubli- 580021
+Tel: (011) 234 456
+
+
 </html>
