--- a/about.html
+++ b/about.html
@@ -1,8 +1,12 @@
 <html>
-  ABOUT ASH BANK
+  <body>
+<pre>
+ABOUT ASH BANK
 Our Corporate Office.
 ASH Bank Limited, Corporate Office, Hubli- 580021
 Tel: (011) 234 456
+</pre>
+  </body>
 
 
 </html>
